Стили для блока отзывов

--- a/code/parts/_testimonial.jade
+++ b/code/parts/_testimonial.jade
@@ -24,22 +24,32 @@
 
 	.testimonial-block
 		.testimonial-item
-			p.
+			p.text.
 				“ornare pede montes, morbi urna sed temporibus non, nibh inceptos enim turpis natoque”
-			img
+			hr
+			img(src="../img/mini_photo.jpg")
 			p.login @Someone famous
 			p.article Someone famous
 
 		.testimonial-item
-			p.
+			p.text.
 				“ornare pede montes, morbi urna sed temporibus non, nibh inceptos enim turpis natoque”
-			img
+			hr
+			img(src="../img/mini_photo.jpg")
 			p.login @Someone famous
 			p.article Someone famous
 
 		.testimonial-item
-			p.
+			p.text.
 				“ornare pede montes, morbi urna sed temporibus non, nibh inceptos enim turpis natoque”
-			img
+			hr
+			img(src="../img/mini_photo.jpg")
 			p.login @Someone famous
 			p.article Someone famous
+
+	ul.dots
+		li
+		li.active
+		li
+		li
+		li
