--- a/code/index.jade
+++ b/code/index.jade
@@ -13,5 +13,6 @@ html(lang="ru")
 		include parts/_works
 		include parts/_twitter
 		include parts/_testimonial
+		include parts/_pricing
 		//- include parts/_body
 		include parts/_footer
