--- a/css/style.css
+++ b/css/style.css
@@ -2030,7 +2030,32 @@ header nav ul li a:hover
 }
 .pricing
 {
-    max-width: 96rem;
+    position: relative;
+
+    overflow: visible;
+
+    width: 100%;
+    max-width: 100%;
+    padding-bottom: 15rem;
+
+    border-top: 1px solid #f1f1f1;
+}
+.pricing .shaped
+{
+    position: absolute;
+    z-index: -999;
+    top: 0;
+
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+
+    background: #f7f7f7;
+
+    -webkit-shape-outside: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+            shape-outside: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
 }
 .pricing .price-shits
 {
@@ -2038,6 +2063,9 @@ header nav ul li a:hover
     display: -webkit-flex;
     display: -ms-flexbox;
     display:         flex;
+
+    max-width: 96rem;
+    margin: 10rem auto;
 
     flex-directon: row;
     -webkit-flex-wrap: nowrap;
@@ -2079,7 +2107,7 @@ header nav ul li a:hover
     font-size: 6rem;
     font-weight: 600;
 
-    padding: 5.5rem 0;
+    padding: 5rem 0;
 
     color: #333;
 }
@@ -2107,4 +2135,39 @@ header nav ul li a:hover
     list-style-type: none;
 
     color: #333;
+}
+.pricing .price-shits .price-item button
+{
+    font-family: 'Lato', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 600;
+
+    box-sizing: border-box;
+    width: 12rem;
+    height: 3.5rem;
+    margin: 2.5rem auto;
+
+    -webkit-transition: background .3s;
+            transition: background .3s;
+    text-align: center;
+    text-transform: uppercase;
+
+    border: 1px solid #333;
+    border-radius: 5%;
+    background: none;
+}
+.pricing .price-shits .price-item button:hover
+{
+    background: #fafafa;
+}
+.pricing .price-shits .price-item .bottom-text
+{
+    font-family: 'Lato', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 300;
+    line-height: 3rem;
+
+    text-transform: uppercase;
+
+    color: #999;
 }
