Блок с контактами. Разметка и стили

--- a/code/index.jade
+++ b/code/index.jade
@@ -14,5 +14,5 @@ html(lang="ru")
 		include parts/_twitter
 		include parts/_testimonial
 		include parts/_pricing
-		//- include parts/_body
+		include parts/_touch
 		include parts/_footer
