--- a/css/style.less
+++ b/css/style.less
@@ -122,6 +122,15 @@ html{
     }
 }
 
+button{
+	&:focus,
+	&:active,
+	&:visited{
+		outline: none;
+	}
+}
+
+
 @import url(_header.less);
 @import url(_mainScreen.less);
 @import url(_about.less);
@@ -133,6 +142,8 @@ html{
 @import url(_twitter.less);
 @import url(_testimonial.less);
 @import url(_pricing.less);
+@import url(_touch.less);
+@import url(_footer.less);
 
 
 
