Разметка и стили для подвала страницы

--- a/code/index.jade
+++ b/code/index.jade
@@ -4,15 +4,16 @@ html(lang="ru")
 	include parts/_head
 	body
 		include parts/_header
-		include parts/_mainScreen
-		include parts/_about
-		include parts/_skils
-		include parts/_team
-		include parts/_service
-		include parts/_fun
-		include parts/_works
-		include parts/_twitter
-		include parts/_testimonial
-		include parts/_pricing
-		include parts/_touch
+		main
+			include parts/_mainScreen
+			include parts/_about
+			include parts/_skils
+			include parts/_team
+			include parts/_service
+			include parts/_fun
+			include parts/_works
+			include parts/_twitter
+			include parts/_testimonial
+			include parts/_pricing
+			include parts/_touch
 		include parts/_footer
