--- a/code/parts/_footer.jade
+++ b/code/parts/_footer.jade
@@ -1,2 +1,29 @@
 footer
-	
+	.map
+		script(type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=5g5S7Qyn7t2easkHFl9goe1_mmu74nd0&width=100%&height=550&lang=ru_RU&sourceType=constructor")
+	.social
+		ul
+			li
+				a(href="https://www.facebook.com/solar.rust")
+					i(class="fa fa-facebook")
+			li
+				a(href="https://twitter.com/ABatickaya")
+					i(class="fa fa-twitter")
+			li
+				a(href="https://vk.com/solar_rust")
+					i(class="fa fa-vk")
+			li
+				a(href="https://www.linkedin.com/in/%D0%B0%D0%BB%D0%B5%D0%BD%D0%B0-%D0%B1%D0%B0%D1%82%D0%B8%D1%86%D0%BA%D0%B0%D1%8F-77182578?trk=hp-identity-photo")
+					i(class="fa fa-linkedin")
+			li
+				a(href="https://github.com/solarrust")
+					i(class="fa fa-github-alt")
+
+	.copy
+		p
+			span
+				© 2016 
+			|Fe 
+			span
+				|All rights reserved. Theme by 
+			|Alena Batitskaia.
