--- a/css/style.less
+++ b/css/style.less
@@ -130,6 +130,13 @@ button{
 	}
 }
 
+.hidden{
+	opacity: 0;
+}
+
+.visible{
+	opacity: 1;
+}
 
 @import url(_header.less);
 @import url(_mainScreen.less);
