--- a/css/_header.less
+++ b/css/_header.less
@@ -5,6 +5,7 @@ header{
     position: absolute;
     padding: 3rem 0;
     z-index: 1;
+    overflow: visible;
 
     div, nav{
         display: inline-block;
@@ -13,6 +14,7 @@ header{
     .logo{
         max-width: 7.4rem;
         max-height: 5.8rem;
+        position: absolute;
 
         a{
             display: block;
