--- a/code/parts/_header.jade
+++ b/code/parts/_header.jade
@@ -6,7 +6,7 @@ header
 
 	nav
 		//- Создаем массив для меню
-		- var menus = {'Home':'#', 'About Us':'#', 'Products':'#', 'Testimonials':'#', 'Contact':'#'}
+		- var menus = {'Home':'#', 'About Us':'#about', 'Products':'#service', 'Testimonials':'#test', 'Contact':'#contacts'}
 		ul
 			each menuHref, menuName in menus
 				li
