--- a/css/_header.less
+++ b/css/_header.less
@@ -1,4 +1,4 @@
-header{
+header {
     width: 90%;
     max-height: 16rem;
     margin: 0 5%;
@@ -7,16 +7,14 @@ header{
     z-index: 1;
     overflow: visible;
 
-    div, nav{
+    div, nav {
         display: inline-block;
     }
 
-    .logo{
-        max-width: 7.4rem;
-        max-height: 5.8rem;
-        position: absolute;
+    .logo {
+        width: 7.4rem;
 
-        a{
+        a {
             display: block;
             width: 100%;
         }
