--- a/css/_team.less
+++ b/css/_team.less
@@ -7,7 +7,6 @@
     max-width: 100%;
     height: 100rem;
     padding-bottom: 0;
-    z-index: -1;
 
 	.shaped{
 		position: absolute;
@@ -19,8 +18,8 @@
         background-size: cover;
         float: left;
         float: right;
-        shape-outside: polygon(0 0, 100% 0, 100% 83%, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 83%, 0 100%);
+        shape-outside: polygon(0 14%, 100% 0, 100% 83%, 0 100%);
+        clip-path: polygon(0 14%, 100% 0, 100% 83%, 0 100%);
 
         &:after{
         	background: rgba(51, 51, 51, 0.9);
