--- a/css/style.less
+++ b/css/style.less
@@ -2,6 +2,8 @@
 
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,300);
 
+
+// Миксины шрифтов
 .lato() {
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
@@ -18,10 +20,12 @@
 	font-weight: 300;
 }
 
+// Миксин стандартной тени
 .box-shadow(@color: @text-gray;) {
 	box-shadow: 0px 2px 9px -3px @color;
 }
 
+// Набор цветов
 @white: #fff;
 @blue: #00ccff;
 @orange: #ff9900;
@@ -31,6 +35,8 @@
 @text-gray: #999;
 @gray6: #666;
 
+
+// Основные стили
 html{
 	font-size: 62.5%;
 }
@@ -130,13 +136,15 @@ button{
 	}
 }
 
-.hidden{
+// Классы для плавной прокрутки до якоря
+.hidden {
 	opacity: 0;
 }
 
-.visible{
+.visible {
 	opacity: 1;
 }
+
 
 @import url(_header.less);
 @import url(_mainScreen.less);
