--- a/css/_header.less
+++ b/css/_header.less
@@ -13,10 +13,14 @@ header {
 
     .logo {
         width: 7.4rem;
+        height: 5.8rem;
 
         a {
             display: block;
             width: 100%;
+            height: 100%;
+            background: url(../img/logo.svg) no-repeat center;
+            background-size: contain;
         }
 
         object{
