--- a/css/style.css
+++ b/css/style.css
@@ -144,12 +144,17 @@ header nav
 header .logo
 {
     width: 7.4rem;
+    height: 5.8rem;
 }
 header .logo a
 {
     display: block;
 
     width: 100%;
+    height: 100%;
+
+    background: url(../img/logo.svg) no-repeat center;
+    background-size: contain;
 }
 header .logo object
 {
