Адаптация под IPad

--- a/css/_fun.less
+++ b/css/_fun.less
@@ -36,6 +36,7 @@
 
     	.facts-cont{
     		width: 25%;
+    		max-width: 23.5rem;
 			text-align: center;
 			padding: 3.5rem 0;
 			background: @white;
@@ -64,7 +65,7 @@
 
 			.title{
 				.lato;
-				font-size: 2.2rem;
+				font-size: 2rem;
 				color: @blue;
 				margin: 4.5rem 0 3rem 0;
 			}
