--- a/css/_testimonial.less
+++ b/css/_testimonial.less
@@ -8,7 +8,7 @@
 		display: flex;
 		flex-direction: row;
 		flex-wrap: nowrap;
-		justify-content: space-between;
+		justify-content: space-around;
 		margin: 6rem auto;
 
 		a{
@@ -35,7 +35,7 @@
 		display: flex;
 		flex-direction: row;
 		flex-wrap: nowrap;
-		justify-content: space-between;
+		justify-content: space-around;
 		max-width: 96rem;
 		margin: 0 auto;
 
