--- a/css/_twitter.less
+++ b/css/_twitter.less
@@ -16,8 +16,8 @@
         background-size: cover;
         float: left;
         float: right;
-        shape-outside: polygon(0 0, 100% 0, 100% 83%, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 83%, 0 100%);
+        shape-outside: polygon(0 14%, 100% 0, 100% 83%, 0 100%);
+        clip-path: polygon(0 14%, 100% 0, 100% 83%, 0 100%);
 
         &:after{
         	background: rgba(51, 51, 51, 0.9);
@@ -68,10 +68,11 @@
     		font-size: 1.8rem;
     		color: @white;
     		font-weight: 300;
-    		max-width: 81rem;
+    		width: 81rem;
     		text-align: center;
     		max-height: 20rem;
     		margin: 9rem auto;
+            max-width: 90%;
     	}
 
     	.underblock{
