--- a/css/style.less
+++ b/css/style.less
@@ -56,6 +56,7 @@ html{
 		display: block;
 		max-width: 96rem;
 		margin: 0 auto;
+		width: 90%;
 
 		&:after{
 			content: "";
@@ -89,8 +90,9 @@ html{
 			margin-left: 7rem;
 			vertical-align: text-top;
 			float: right;
-			max-width: 60rem;
+			width: 60rem;
 			box-sizing: border-box;
+			max-width: 60%;
 
 			img{
 				margin-right: 3rem;
