--- a/css/_team.less
+++ b/css/_team.less
@@ -5,7 +5,7 @@
     overflow: visible;
     width: 100%;
     max-width: 100%;
-    height: 100rem;
+    min-height: 100rem;
     padding-bottom: 0;
 
 	.shaped{
@@ -85,7 +85,6 @@
     		text-align: center;
     		color: @white;
     		box-sizing: border-box;
-    		margin: 0 4rem;
     		font-size: 1.2rem;
     		margin-top: 5rem;
     		position: relative;
@@ -103,18 +102,21 @@
     			font-size: 2rem;
     			text-transform: uppercase;
     			margin: .5rem auto;
+                padding: 0 4rem;
     		}
 
     		.work{
     			.lato;
     			color: @blue;
     			text-align: center;
+                padding: 0 4rem;
     		}
 
     		.words{
     			.lato;
     			text-align: justify;
     			margin-top: 1.5rem;
+                padding: 0 4rem;
     		}
     	}
     }
