--- a/css/_works.less
+++ b/css/_works.less
@@ -21,6 +21,7 @@
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
+			text-align: center;
 			.box-shadow;
 
 			&:hover{
@@ -112,14 +113,9 @@
 	}
 
 	.work-gallery{
-		// display: flex;
-  //   	flex-direction: column;
-  //   	justify-content: space-around;
-  //   	align-items: center;
-  //   	align-content: space-between;
     	border-top: 1px solid #f1f1f1;
     	position: relative;
-    	height: 135rem;
+    	min-height: 135rem;
     	text-align: center;
 	    overflow: visible;
 	    width: 100%;
@@ -130,7 +126,7 @@
 		    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
 		    background: @back-gray;
 		    width: 100%;
-		    height: 100%;
+		    height: 103%;
 		    box-sizing: border-box;
 		    position: absolute;
 		    top: 0;
