--- a/css/style.css
+++ b/css/style.css
@@ -2542,3 +2542,70 @@ footer .copy span
     opacity: .7;
     color: #fff;
 }
+.for-mobile
+{
+    display: none;
+}
+@media screen and (max-width: 736px)
+{
+    body
+    {
+        overflow: hidden;
+    }
+    .for-mobile
+    {
+        position: fixed;
+        z-index: 10;
+        top: 0;
+        left: 0;
+
+        display: block;
+
+        box-sizing: border-box;
+        width: 100%;
+        height: 100%;
+        padding: 2rem;
+
+        color: white;
+        background: url(../img/main.jpg) no-repeat center;
+    }
+    .for-mobile:after
+    {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        display: block;
+
+        width: 100%;
+        height: 100%;
+
+        content: ' ';
+
+        background-image: -webkit-repeating-radial-gradient(center center, rgba(255, 255, 255, .4), rgba(255, 255, 255, .5) 1px, transparent 1px, transparent 100%);
+        background-image:         repeating-radial-gradient(center center, rgba(255, 255, 255, .4), rgba(255, 255, 255, .5) 1px, transparent 1px, transparent 100%);
+        background-size: .5rem .5rem;
+    }
+    .for-mobile h1
+    {
+        font-size: 20vmin;
+
+        display: block;
+
+        max-width: 80%;
+
+        color: #0cf;
+    }
+    .for-mobile p
+    {
+        font-size: 10vmin;
+
+        display: block;
+
+        max-width: 80%;
+    }
+    .for-mobile i
+    {
+        color: #f90;
+    }
+}
