--- a/css/style.less
+++ b/css/style.less
@@ -169,10 +169,6 @@ button{
 }
 
 @media screen and (max-width: 736px){
-	body{
-		overflow: hidden;
-	}
-
 	.for-mobile{
 		display: block;
 		position: fixed;
@@ -183,7 +179,7 @@ button{
 		background: url(../img/main.jpg) no-repeat center;
 		z-index: 10;
 		color: white;
-		padding: 2rem;
+		padding: 0 2rem;
 		box-sizing: border-box;
 
 		&:after{
@@ -204,13 +200,15 @@ button{
 		h1{
 			display: block;
 			color: @blue;
+			font-size: 20px;
 			font-size: 20vmin;
-			max-width: 80%;
+			width: 80%;
 		}
 
 		p{
 			display: block;
-			max-width: 80%;
+			width: 80%;
+			font-size: 10px;
 			font-size: 10vmin;
 		}
 
@@ -218,4 +216,6 @@ button{
 			color: @orange;
 		}
 	}
+
+
 }
